--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-responsive-carousel": "^3.1.51",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
