--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "datacode.in",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://akshayDatacode.github.io/react-datacode.in/#",
+  "homepage": "https://akshayDatacode.github.io/react-datacode.in/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
