--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "disqus-react": "^1.0.8",
     "gh-pages": "^2.2.0",
     "modal": "^1.2.0",
     "prism-react-renderer": "^1.0.2",
     "prismjs": "^1.19.0",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.13.0",
     "react-responsive-carousel": "^3.1.51",
     "react-router": "^5.1.2",
