--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^1.0.0-beta.17",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.13.0",
+    "react-facebook": "^8.1.4",
     "react-responsive-carousel": "^3.1.51",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
