--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "commentbox.io": "^2.0.0",
     "disqus-react": "^1.0.8",
     "gh-pages": "^2.2.0",
     "modal": "^1.2.0",
@@ -19,6 +20,7 @@
     "prismjs": "^1.19.0",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-bootstrap-sidebar": "0.0.1",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.13.0",
     "react-facebook": "^8.1.4",
@@ -26,7 +28,10 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
-    "react-scroll": "^1.7.16"
+    "react-scroll": "^1.7.16",
+    "react-sidebar": "^3.0.2",
+    "sidebar": "^1.0.2",
+    "v3": "0.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
