--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^7.15.0",
     "gh-pages": "^2.2.0",
     "modal": "^1.2.0",
+    "npm": "^6.14.8",
     "prism-react-renderer": "^1.0.2",
     "prismjs": "^1.19.0",
     "react": "^16.13.0",
