--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.13.0",
     "react-facebook": "^8.1.4",
+    "react-full-screen": "^0.3.1",
     "react-helmet": "^6.1.0",
     "react-responsive-carousel": "^3.1.51",
     "react-router": "^5.1.2",
