--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "disqus-react": "^1.0.8",
     "firebase": "^7.15.0",
     "gh-pages": "^2.2.0",
+    "link-preview-generator": "0.0.4",
     "modal": "^1.2.0",
+    "node-sass": "^4.14.1",
     "npm": "^6.14.8",
     "prism-react-renderer": "^1.0.2",
     "prismjs": "^1.19.0",
