--- a/package.json
+++ b/package.json
@@ -32,13 +32,19 @@
     "react-facebook": "^8.1.4",
     "react-full-screen": "^0.3.1",
     "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.1.51",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.4",
     "react-scroll": "^1.7.16",
+    "react-select": "^4.0.2",
     "react-sidebar": "^3.0.2",
     "react-youtube": "^7.11.2",
+    "reactstrap": "^8.9.0",
+    "redux": "^4.0.5",
+    "redux-form": "^8.3.7",
+    "redux-thunk": "^2.3.0",
     "sidebar": "^1.0.2",
     "v3": "0.0.0"
   },
