--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-facebook": "^8.1.4",
     "react-full-screen": "^0.3.1",
     "react-helmet": "^6.1.0",
+    "react-loader-spinner": "^3.1.14",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.1.51",
     "react-router": "^5.1.2",
