--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-full-screen": "^0.3.1",
     "react-helmet": "^6.1.0",
     "react-loader-spinner": "^3.1.14",
+    "react-paginate": "^7.1.0",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.1.51",
     "react-router": "^5.1.2",
