--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^16.13.0",
     "react-facebook": "^8.1.4",
     "react-full-screen": "^0.3.1",
+    "react-google-login": "^5.2.2",
     "react-helmet": "^6.1.0",
     "react-loader-spinner": "^3.1.14",
     "react-paginate": "^7.1.0",
