--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^7.15.0",
     "gh-pages": "^2.2.0",
     "link-preview-generator": "0.0.4",
+    "link-preview-js": "^2.1.6",
     "modal": "^1.2.0",
     "node-sass": "^4.14.1",
     "npm": "^6.14.8",
