--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "bootstrap": "^4.4.1",
     "commentbox.io": "^2.0.0",
     "disqus-react": "^1.0.8",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "firebase": "^7.15.0",
     "gh-pages": "^2.2.0",
     "link-preview-generator": "0.0.4",
@@ -30,6 +32,7 @@
     "react-countdown": "^2.2.1",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.13.0",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-facebook": "^8.1.4",
     "react-full-screen": "^0.3.1",
     "react-google-login": "^5.2.2",
