--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-facebook": "^8.1.4",
     "react-full-screen": "^0.3.1",
     "react-google-login": "^5.2.2",
+    "react-grid-gallery": "^0.5.5",
     "react-helmet": "^6.1.0",
     "react-loader-spinner": "^3.1.14",
     "react-paginate": "^7.1.0",
