--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-bootstrap-sidebar": "0.0.1",
+    "react-card-carousel": "^1.1.3",
     "react-countdown": "^2.2.1",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.13.0",
@@ -40,6 +41,7 @@
     "react-grid-gallery": "^0.5.5",
     "react-helmet": "^6.1.0",
     "react-loader-spinner": "^3.1.14",
+    "react-multi-carousel": "^2.6.2",
     "react-paginate": "^7.1.0",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.1.51",
