--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "link-preview-js": "^2.1.6",
     "material-design-icons": "^3.0.1",
     "modal": "^1.2.0",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "npm": "^6.14.8",
     "prism-react-renderer": "^1.0.2",
